--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,6 +1,20 @@
 html, body {
     height: 100%;
     margin: 0;
+    background: #3b3f46;
+}
+
+#file-upload {
+    opacity: 0;
+    height: 0px;
+    width: 0px;
+}
+
+.file-label {
+    display: block;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
 }
 
 #canvas {
@@ -20,17 +34,13 @@ html, body {
     font-size: 24px;
 }
 
-.container .row.header {
-    flex: 0 1 auto;
-    background: black;
-}
-
 .container .row.section {
     flex: 1 1 auto;
 }
 
 .container .row.footer {
     flex: 0 1 auto;
-    background: black;
+    background: #1e2328;
     text-align: center;
+    border-radius: 24px;
 }
