--- a/web/css/style.css
+++ b/web/css/style.css
@@ -44,3 +44,13 @@ html, body {
     text-align: center;
     border-radius: 24px;
 }
+
+.text {
+    position: absolute;
+    color: #fed053;
+    font-size: 16px;
+}
+
+#output {
+    right: 1px;
+}
