--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,7 +1,11 @@
 html, body {
-    height: 100%;
     margin: 0;
-    background: #3b3f46;
+    height: 100%;
+    background: #1e2328;
+}
+
+pre {
+    white-space: pre-wrap;
 }
 
 #file-upload {
@@ -10,47 +14,39 @@ html, body {
     width: 0px;
 }
 
-.file-label {
+.upload-button {
     display: block;
+    padding: 3px;
     cursor: pointer;
-    width: 100%;
-    height: 100%;
+    background: #2a2e34;
+    color: #f3d053;
+    border-radius: 8px;
+    text-align: center;
 }
 
 #canvas {
+    position: fixed;
     width: 100%;
     height: 100%;
 }
 
-.container {
-    padding: 0;
-    display: flex;
-    height: 100%;
-    flex-flow: column;
+#help-message {
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
-.row {
-    color: white;
-    font-size: 24px;
-}
-
-.container .row.section {
-    flex: 1 1 auto;
-}
-
-.container .row.footer {
-    flex: 0 1 auto;
+.info-box {
+    margin: 0;
     background: #1e2328;
-    text-align: center;
-    border-radius: 24px;
-}
-
-.text {
     position: absolute;
     color: #fed053;
-    font-size: 16px;
+    font-size: 24px;
+    padding: 16px;
+    border-radius: 8px;
 }
 
 #output {
     right: 1px;
+    background: #1e2328;
 }
