--- a/web/css/style.css
+++ b/web/css/style.css
@@ -8,6 +8,10 @@ pre {
     white-space: pre-wrap;
 }
 
+input {
+    accent-color: #fed053;
+}
+
 #file-upload {
     opacity: 0;
     height: 0px;
@@ -24,13 +28,24 @@ pre {
     text-align: center;
 }
 
+#menu, #app-data {
+    visibility: hidden;
+}
+
+.hor-options {
+    display: flex;
+    justify-content: space-around;
+    gap: 5px;
+    flex-direction: row;
+}
+
 #canvas {
     position: fixed;
     width: 100%;
     height: 100%;
 }
 
-#help-message {
+.center-message{
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -42,7 +57,8 @@ pre {
     margin-bottom: 10px;
 }
 
-.info-box {
+
+.box {
     margin: 0;
     background: #1e2328;
     position: absolute;
@@ -50,9 +66,7 @@ pre {
     font-size: 24px;
     padding: 16px;
     border-radius: 8px;
-    visibility: hidden;
     display: flex;
-
     flex-direction: column;
 }
 
@@ -64,14 +78,9 @@ pre {
 #threads-count {
     flex-grow: 1;
     outline: none;
-    accent-color: #fed053;
 }
 
-.radio-input {
-    accent-color: #fed053;
-}
-
-.radio-option {
+.option {
     width: 100%;
     border-radius: 5px;
     display: flex;
@@ -80,9 +89,10 @@ pre {
     background: #2a2e34;
 }
 
-.radio-label {
+.label {
     cursor: pointer;
     user-select: none;
     display: block;
     width: 100%;
+    text-align: center;
 }
